[gd_scene load_steps=6 format=3 uid="uid://dhgy1ky3c08oc"]

[ext_resource type="Script" uid="uid://53d8xhwkfamx" path="res://scenes/objects/memory_slot/reformed_slot.gd" id="1_3q30a"]
[ext_resource type="PackedScene" uid="uid://dnmp4hykpgrnl" path="res://scenes/objects/reformed_mess/ref_passive_slot.tscn" id="2_4d2sb"]
[ext_resource type="Script" uid="uid://uoqgxeygoso" path="res://scenes/objects/memory_slot/data.gd" id="2_ojdfj"]
[ext_resource type="AudioStream" uid="uid://cfwtud6q224sc" path="res://songs/click (2).wav" id="4_46md2"]
[ext_resource type="AudioStream" uid="uid://depekemakeojs" path="res://songs/click (1).wav" id="5_m7r7u"]

[node name="ref_slot" type="PanelContainer"]
offset_right = 300.0
offset_bottom = 70.0
script = ExtResource("1_3q30a")
self_instance = ExtResource("2_4d2sb")
slot_type = 2

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
expand_mode = 1
script = ExtResource("2_ojdfj")

[node name="debug" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.7176471)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 7
theme_override_font_sizes/font_size = 20
text = "0"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="audio_click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_46md2")

[node name="audio_leave" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_m7r7u")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
